# medical-data

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  __init__.py  example_usage.py  medical_data_browser.py  pyproject.toml  utils.py
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md
examples/: __init__.py  advanced_filtering.py  usage_examples.py
medical_data/: __init__.py  __main__.py  browser.py  utils.py
scripts/: prepare_release.sh  run_checks.sh  setup_dev.sh
tests/: __init__.py  conftest.py  test_browser.py
